fixed title alignment in code page

--- a/app/styles/site/code.less
+++ b/app/styles/site/code.less
@@ -109,8 +109,12 @@
         }
 
         .headContent{
-            padding: 20px 15px 20px 15px;
-            height: 85px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            height: 80px;
+            padding: 10px;
+            margin-bottom: 20px;
         }
         .bodyContent{
             padding: 20px 25px 20px 25px;
@@ -123,11 +127,7 @@
         }
 
         .numberBox{
-            bottom: 20px;
-            position: relative;
-            display: inline;
-            float: left;
-            margin: 15px 15px 15px 0px;
+            margin: 15px 10px 15px 0px;
             padding: 10px;
             font-size: 35px;
             line-height: 35px;
